--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write # Needed to create GitHub releases
+      packages: write # Needed to publish packages to GitHub Packages
       id-token: write # Needed for provenance
 
     steps:
