--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "@divnotes/dn-voxel-loader",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "A framework-agnostic JavaScript library for loading MagicaVoxel .vox files.",
-  "main": "dist/dn-voxel-loader.cjs.js",
+  "main": "dist/dn-voxel-loader.cjs.cjs",
   "module": "dist/dn-voxel-loader.esm.js",
   "browser": "dist/dn-voxel-loader.umd.js",
   "type": "module",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/dn-voxel-loader.esm.js",
+      "require": "./dist/dn-voxel-loader.cjs.cjs"
+    }
+  },
   "files": [
     "dist",
     "src"
