--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "checkJs": true,
     "declaration": true,
     "emitDeclarationOnly": true,
+    "declarationDir": "./dist",
     "strict": false,
     "esModuleInterop": true
   },
