--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@divnotes/dn-voxel-loader",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "A framework-agnostic JavaScript library for loading MagicaVoxel .vox files.",
   "main": "dist/dn-voxel-loader.cjs.cjs",
   "module": "dist/dn-voxel-loader.esm.js",
@@ -47,7 +47,7 @@
   "homepage": "https://divnotes.github.io/dn-voxel-loader/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/DivNotes/dn-voxel-loader"
+    "url": "git+https://github.com/DivNotes/dn-voxel-loader.git"
   },
   "bugs": {
     "url": "https://github.com/divnotes/dn-voxel-loader/issues"
@@ -65,7 +65,7 @@
     "rollup": "^4.40.0",
     "typedoc": "^0.25.12",
     "typedoc-plugin-markdown": "^3.17.1",
-    "vitepress": "^1.2.3",
+    "vitepress": "^2.0.0-alpha.5",
     "vitest": "^3.1.1"
   },
   "engines": {
